...
    const val LOCAL_TIME = "local_time"
    const val LOCAL_LABEL = "local_label"
    const val LOCAL_DATE = "local_date"
    const val ZONE_TILE = "zone_tile"
    const val ZONE_VALUE = "zone_value"
    const val CLOCK_CHANGE_TILE = "clock_change_tile"
    const val CALLSIGN = "callsign"
    const val LOCATOR = "locator"
    const val LOCATION_SOURCE = "location_source"
    const val LOCATION_LOCATOR = "location_locator"
    const val LOCATION_EXTENDED_LOCATOR = "location_extended_locator"
    const val LOCATION_SWITCH = "location_switch"
    const val LOCATION_HOME = "location_home"
    const val LOCATION_LATITUDE = "location_latitude"
...
